Create,style number and operator buttons

--- a/src/css/Screen.css
+++ b/src/css/Screen.css
@@ -1,7 +1,7 @@
 .screen__container{
     width: 496px;
     height: 30px;
-    background-color: lightblue;
+    background-color: rgba(17, 102, 133, 0.493);
     padding-top: 10px;
     padding-left: 4px;
 
