--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .cal-container__form {
-  height: 300px;
+  padding-bottom: 2px;
   max-width: 670px;
   margin: auto;
   /* padding: 0.5rem 0.5rem 0.5rem 0.5rem; */
